--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,5 +17,5 @@ jobs:
           openai-api-key: ${{ secrets.OPENAI_API_KEY }}
           github-token: ${{ secrets.GITHUB_TOKEN  }}
           github-pr-id: ${{ github.event.number }}
-          dev-lang: React
+          dev-lang: JAVA
           openai-max-tokens: 4096
